fix broken layout on mobile

--- a/themes/alpha-dust/source/css/_partial/post-content.styl
+++ b/themes/alpha-dust/source/css/_partial/post-content.styl
@@ -18,6 +18,10 @@ section.main
         margin 50px 0 15px 0
         text-shadow $titleTextShadowLight
 
+      p
+        @media $xs
+          word-break: break-word
+
       hr
         border-color $mainColor1
 
